# mcp-guard

./: .mcp.json  CHANGELOG.md  Dockerfile  LAUNCH.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  mcp-scan.yml
docs/: AWESOME_PR_BODY.md  AWESOME_PR_INSTRUCTIONS.md  LAUNCH_MULTI_CHANNEL.md  REDDIT_R_MCP_COPYPASTE.txt  RELEASE_v0.1.1.md  SHOW_HN_COPYPASTE.txt  X_THREAD_COPYPASTE.txt  claude-desktop.md  demo.cast  demo_script.sh
examples/: docker-compose.yaml  mcp-guard.yaml  minimal.yaml
mcp_guard/: __init__.py  __main__.py  approval.py  approval_store.py  approvals_cli.py  audit.py  auth.py  config.py  http_transport.py  oauth.py  proxy.py  ratelimit.py  router.py  scan.py
tests/: test_http_transport.py  test_mcp_guard.py  test_v012_features.py  test_v013_approvals.py  test_v014_routing_oauth.py
tests/fixtures/: claude_desktop_config.json
