[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bonanza-mcp-guard"
version = "0.1.4"
description = "Production MCP gateway: JWT auth, rate limiting, spending controls, audit log. mcp-guard serve --config mcp-guard.yaml"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "mcp", "model-context-protocol", "gateway", "security",
    "auth", "jwt", "rate-limit", "audit", "ai", "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
full = ["pyyaml>=6.0"]
dev  = ["pytest>=8", "pyyaml>=6.0"]

[project.scripts]
mcp-guard = "mcp_guard.__main__:main"

[project.urls]
Homepage   = "https://bonanza-labs.com"
Repository = "https://github.com/c6zks4gssn-droid/mcp-guard"
Issues     = "https://github.com/c6zks4gssn-droid/mcp-guard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_guard*"]
